# electricity-bills

./: .gitignore  README.md  app.py  main.py  pyproject.toml  template.py
.qodo/: history.sqlite
config/: all_schema.yaml  data-ingestion.yaml  data-schema.yaml  data-transformation.yaml  data-validation.yaml  model-evaluation.yaml  model-params.yaml  model-trainer.yaml  model-validation.yaml  prediction.yaml  wandb.yaml
experiment/: model_tuning.py  trial_01_data_ingestion.py  trial_02_data_validation.py  trial_03_data_transformation.py  trial_04_model_trainer.py  trial_05_model_validation.py  trial_06_model_evaluation.py
src/ElectricityBill/: logger.py
src/ElectricityBill/components/: c_01_data_ingestion.py  c_03_data_transformation.py
src/ElectricityBill/config_entity/: config_params.py
src/ElectricityBill/config_manager/: config_settings.py
src/ElectricityBill/constants/: __init__.py
src/ElectricityBill/pipelines/: pip_01_data_ingestion.py  pip_02_data_validation.py  pip_07_prediction_pipeline.py
src/ElectricityBill/utils/: commons.py
templates/: home.html  index.html  prediction.html
